deployment/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway-deployment
  name: gateway-deployment
spec:
  replicas: {replicas}
  selector:
    matchLabels:
      app: gateway-deployment
  template:
    metadata:
      labels:
        app: gateway-deployment
    spec:
      containers:
        - image: {container_image}
          name: gateway-pod
          ports:
            - containerPort: 80
          imagePullPolicy: Always
