deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: doxa-gateway
spec:
  selector:
    app: gateway-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
