deployment/gateway.ingress-development.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: doxa-gateway-dev-ingress
  annotations:
    app.kubernetes.io/name: ingress-nginx
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: api-connex-dev.doxa-holdings.com
    http:
      paths:
      - backend:
          serviceName: doxa-gateway
          servicePort: 80
  tls:
  - hosts:
    - api-connex-dev.doxa-holdings.com
    secretName: c-bgzzr
