deployment/gateway.ingress-uat.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doxa-gateway-ingress
  annotations:
    app.kubernetes.io/name: ingress-nginx
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: api-connex-uat.doxa-holdings.com
    http:
      paths:
      - backend:
          service:
            name: doxa-gateway
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api-connex-uat.doxa-holdings.com
    secretName: doxa-holdings.com
